# claude-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOWTO_PLUGINS.md  README.md
src/: main.rs
src/commands/: add.rs  init.rs  list.rs  mod.rs  register.rs  validate.rs
src/templates/: mod.rs
src/utils/: mod.rs
