[package]
name = "cforge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
colored = "2.0"
dialoguer = "0.11"
convert_case = "0.6"
walkdir = "2"
